@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0

title US071 Domain Model — Decommission Aircraft

package "AirTransportCompany Aggregate" <<Rectangle>> {

    class AirTransportCompany <<entity, aggregate root>> {
        name
    }
}

package "Aircraft Aggregate" <<Rectangle>> {

    class Aircraft <<entity, aggregate root>> {
        registrationNumber
        registeredCountry
        numberOfCrewElements
        yearOfManufacture
    }

    class CabinConfiguration <<value object>> {
        firstClassSeats
        businessClassSeats
        economyClassSeats
    }

    Enum OperationalStatus {
        ACTIVE
        DECOMMISSIONED
    }
}

package "AircraftModel Aggregate" <<Rectangle>> {
    class AircraftModel <<entity, aggregate root>> {
        modelName
    }
}

AirTransportCompany "1" --> "0..*" Aircraft : "owns"
Aircraft "1" *-- "0..1" CabinConfiguration : "has"
Aircraft "1" --> "1" OperationalStatus : "has"
Aircraft "1" --> "1" AircraftModel : "defined by"

@enduml
